src/@styles/main.less
main {

    &.scrolled md-tabs {
        position: fixed !important;
        top: -28px;
        z-index: 2;

        width: 100%;
        max-width: 1225px;
        border-bottom: 1px solid var(--md-sys-color-outline-variant);

        position: relative;
        background-color: var(--md-sys-color-surface);
        opacity: 0.95;

        @media (min-width: 1180px) {
            margin: 0 -22px;
            padding: 0 34px !important;
        }

        md-tab {
            margin-bottom: -1px;
        }
    }

    #tabs {
        height: 65px;

        md-tabs {

            md-tab {
                md-icon {
                    --md-icon-font-variation-settings: 'FILL' 0;
                    transition: .2s linear;
                }

                &[selected] md-icon {
                    --md-icon-font-variation-settings: 'FILL' 1;
                }
            }

            @media (min-width: 1180px) {
                padding: 0 12px;
            }

            @media (min-width: 605px) {
                justify-content: flex-start;

                md-tab {
                    max-width: 250px;
                }
            }
        }
    }

    @import "./cards.less";
}

